<resources>
    <string name="app_name">ProductRegistration</string>
    <string name="action_settings">Settings</string>
    <string name="take_picture">Scan</string>
    <string name="title_activity_cadastro">Cadastrar Produto</string>
    <string name="codigo_barras">Código:</string>
    <string name="alias">Detalhe:</string>
    <string name="nome">Nome:</string>
    <string name="Descrição">Descrição</string>
    <string name="peso_volume">Peso/Volume:</string>
    <string name="cancelar">Cancelar</string>
    <string name="salvar">Salvar</string>
    <string name="categoria">Categoria:</string>
    <string name="sub_categoria">Sub Categoria:</string>
    <string name="marca">Marca:</string>
    <string name="title_activity_asdf">asdf</string>
    <string name="title_activity_main2">Main2Activity</string>
</resources>
