<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_cadastro"
    tools:context="info.peilwebsystems.android.productregistration.CadastroActivity">

    <TextView
        android:id="@+id/textCodigo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/codigo_barras"/>
    <TextView
        android:id="@id/valueCodigo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/codigo_barras"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="false"
        android:layout_alignBottom="@id/textCodigo"
        android:layout_toEndOf="@id/textCodigo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="41dp"
        android:text="@string/nome"
        android:id="@+id/textNome"
        android:layout_marginTop="15dp"
        android:gravity="center_vertical"
        android:layout_below="@+id/textCodigo"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/editTextNome"
        android:layout_toStartOf="@+id/editTextNome" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editTextNome"
        android:layout_alignTop="@+id/textNome"
        android:inputType="text"
        android:layout_alignRight="@id/valueCodigo"
        android:layout_alignEnd="@id/valueCodigo"
        android:layout_toEndOf="@+id/textCodigo"
        android:layout_toRightOf="@+id/textCodigo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="41dp"
        android:gravity="center_vertical"
        android:text="@string/alias"
        android:id="@+id/textAlias"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/textNome"
        android:layout_alignLeft="@+id/textNome"

        android:layout_toStartOf="@+id/editTextNome" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editTextAlias"
        android:layout_alignTop="@+id/textAlias"
        android:inputType="text"
        android:layout_alignRight="@+id/editTextNome"
        android:layout_alignEnd="@+id/editTextNome"
        android:layout_toEndOf="@+id/textAlias"

        android:layout_toRightOf="@+id/textAlias" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/Descrição"
        android:id="@+id/textView2"
        android:layout_below="@+id/editTextAlias"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editTextDesc"
        android:inputType="textMultiLine"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/editTextAlias"
        android:layout_alignEnd="@+id/editTextAlias"
        android:layout_below="@+id/textView2" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancelar"
        android:id="@+id/btnCancelar"
        android:layout_alignTop="@+id/btnSalvar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/textView2"
        android:layout_toStartOf="@+id/textView2" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/salvar"
        android:id="@+id/btnSalvar"
        android:layout_below="@+id/editTextDesc"
        android:layout_alignRight="@+id/editTextDesc"
        android:layout_alignEnd="@+id/editTextDesc"
        android:layout_toRightOf="@+id/textView2"
        android:layout_toEndOf="@+id/textView2" />


</RelativeLayout>
