<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:fitsSystemWindows="true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="info.peilwebsystems.android.productregistration.AdicionarMarcaActivity">

    <TextView
        android:id="@+id/textNomeMarca"
        android:layout_width="wrap_content"
        android:layout_height="41dp"
        android:gravity="center_vertical"
        android:text="@string/nome"/>
    <EditText
        android:id="@+id/editNomeMarca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textNomeMarca"
        android:layout_toRightOf="@+id/textNomeMarca"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:inputType="textCapWords" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/salvar"
        android:id="@+id/btnSalvarMarca"
        android:layout_below="@+id/textNomeMarca"
        android:layout_toLeftOf="@+id/button2"
        android:layout_toStartOf="@+id/button2" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancelar"
        android:id="@+id/btnCancelarMarca"
        android:layout_alignTop="@+id/btnSalvarMarca"
        android:layout_alignRight="@+id/editNomeMarca"
        android:layout_alignEnd="@+id/editNomeMarca" />


</RelativeLayout>
